--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                         <li><a href="#">Gallery</a></li>
                         <li><a href="#first_footer">Contact</a></li>
                     </ul>
-                    <li><button class="atheader">Book a Table</button></li>
+                    <li><button class="atheader" onclick="setTimeout(booking,1000)">Book a Table</button></li>
                     <div class="toggle_btn" style="padding-top: 1.5rem; padding-right: 1.5rem;">
                         <i class="fa-solid fa-bars"></i>
                     </div>
