--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         <li><a href="#">Chef's</a></li>
                         <li><a href="#">Gallery</a></li>
                         <li><a href="#first_footer">Contact</a></li>
-                        <li><button class="atheader_hid">Book a Table</button></li>
+                        <li><button class="atheader_hid" onclick="setTimeout(booking,1000)" >Book a Table</button></li>
                     </div>
                 </ul>
             </nav>
@@ -47,7 +47,7 @@
                 <p style="margin-bottom: 1rem;">Lorem ipsum dolor sit, amet consectetur adipisicing elit. 
                     Dolore libero modi error, laboriosam earum similique.
                 </p>
-                <button class="atmain">Book a Table</button>
+                <button class="atmain"  onclick="setTimeout(done,1000)">Book a Table</button>
                 <p id="icon" style="display: inline-block;">
                     <i class="fa-regular fa-circle-play" style="color:red"></i>
                 </p>
